# CMake-test

./: CMakeLists.txt
foo/: CMakeLists.txt
foo/include/: CMakeLists.txt
